# ChangeLog for app-editors/zile
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/zile/ChangeLog,v 1.182 2012/10/13 22:57:32 naota Exp $

  13 Oct 2012;  <naota@gentoo.org> zile-2.4.8.ebuild:
  Add ~x86-fbsd. #384445

  29 Jul 2012; Raúl Porcel <armin76@gentoo.org> zile-2.4.7.ebuild:
  alpha/sparc stable wrt #417343

*zile-2.4.8 (13 Jul 2012)

  13 Jul 2012; Ulrich Müller <ulm@gentoo.org> +zile-2.4.8.ebuild:
  Version bump, fixes bug 425104.

  29 May 2012; Brent Baude <ranger@gentoo.org> zile-2.4.7.ebuild:
  Marking zile-2.4.7 ppc for bug 417343

  25 May 2012; Naohiro Aota <naota@gentoo.org> zile-2.4.7.ebuild:
  Remove -x86-fbsd. #417347

  24 May 2012; Agostino Sarubbo <ago@gentoo.org> zile-2.4.7.ebuild:
  Stable for amd64, wrt bug #417343

  24 May 2012; Jeff Horelick <jdhore@gentoo.org> zile-2.4.7.ebuild:
  marked x86 per bug 417343

  03 Apr 2012; Naohiro Aota <naota@gentoo.org> zile-2.4.6.ebuild,
  zile-2.4.7.ebuild:
  Drop ~x86-fbsd. boehm-gc not yet keyworded.

  02 Apr 2012; Ulrich Müller <ulm@gentoo.org> zile-2.4.6.ebuild,
  zile-2.4.7.ebuild:
  Add perl to DEPEND because tests need it.

  01 Apr 2012; Ulrich Müller <ulm@gentoo.org> -zile-2.4.2.ebuild:
  Remove old.

  01 Apr 2012; Raúl Porcel <armin76@gentoo.org> zile-2.4.6.ebuild:
  alpha/sparc stable wrt #408899

*zile-2.4.7 (01 Apr 2012)

  01 Apr 2012; Ulrich Müller <ulm@gentoo.org> zile-2.3.24-r1.ebuild,
  -zile-2.4.3.ebuild, +zile-2.4.7.ebuild:
  Version bump. Remove intermediate version. Drop livecd USE flag.

  25 Mar 2012; Brent Baude <ranger@gentoo.org> zile-2.4.6.ebuild:
  Marking zile-2.4.6 ppc for bug 408899

  22 Mar 2012; Jeff Horelick <jdhore@gentoo.org> zile-2.4.6.ebuild:
  marked x86 per bug 408899

  20 Mar 2012; Agostino Sarubbo <ago@gentoo.org> zile-2.4.6.ebuild:
  Stable for amd64, wrt bug #408899

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> zile-2.4.2.ebuild:
  sparc stable wrt #391699
