@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/zile/zile-2.4.7.ebuild,v 1.8 2012/07/29 16:53:02 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/zile/zile-2.4.7.ebuild,v 1.9 2012/11/02 07:48:34 ulm Exp $
 
 EAPI=4
 
@@ -8,7 +8,7 @@ DESCRIPTION="Zile is a small Emacs clone"
 HOMEPAGE="http://www.gnu.org/software/zile/"
 SRC_URI="mirror://gnu/zile/${P}.tar.gz"
 
-LICENSE="GPL-3"
+LICENSE="GPL-3+"
 SLOT="0"
 KEYWORDS="alpha amd64 ppc sparc x86 ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
 IUSE="acl test"
