@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/zile
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/zile/ChangeLog,v 1.182 2012/10/13 22:57:32 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/zile/ChangeLog,v 1.183 2012/11/02 07:48:34 ulm Exp $
+
+  27 Oct 2012; Ulrich Müller <ulm@gentoo.org> zile-2.3.24-r1.ebuild,
+  -zile-2.4.6.ebuild, zile-2.4.7.ebuild, zile-2.4.8.ebuild:
+  Specify LICENSE more precisely. Remove old.
 
   13 Oct 2012;  <naota@gentoo.org> zile-2.4.8.ebuild:
   Add ~x86-fbsd. #384445
